Fixed menu in product.html

--- a/product.html
+++ b/product.html
@@ -51,11 +51,11 @@
 					</li>
 
 					<li>
-						<a href="sustainability.html">Sustainability</a>
+						<a href="product.html">Sustainability</a>
 					</li>
 
 					<li>
-						<a href="products.html">Products</a>
+						<a href="product.html#Products">Products</a>
 					</li>
 				</ul>
 			</nav>
