Fixed some mobile things, added logo, centered nav.

--- a/dimensions/index.html
+++ b/dimensions/index.html
@@ -14,46 +14,53 @@
 	<link href="../style.css" rel="stylesheet" type="text/css" media="all" />
 
 	<!-- JAVA -->
+	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="../anchor.js"></script>
 
 
     <!-- External -->
     <link href='http://fonts.googleapis.com/css?family=Lustria' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	
 
 </head>
 <body>
 
 		<!--  Menu  -->
 		<div id="menuBar">
-			<nav>
-				<ul>
-					<li>
-						<a href="index.html">Home</a>
-					</li>
+			<center>
+				<nav>
+					<ul>
+						<li>
+							<a href="index.html">Home</a>
+						</li>
 
-					<li>
-						<a href="index.html#contact">Contact Us</a>
-					</li>
+						<li>
+							<a href="index.html#contact">Contact Us</a>
+						</li>
 
-					<li>
-						<a href="product.html#Sustainability">Sustainability</a>
-					</li>
+						<li>
+							<a href="product.html#Sustainability">Sustainability</a>
+						</li>
 
-					<li>
-						<a href="product.html#Products">Products</a>
-					</li>
-				</ul>
-			</nav>
+						<li>
+							<a href="product.html#Products">Products</a>
+						</li>
+					</ul>
+				</nav>
+			</center>
 			<!--<div class="menuimg"><a href="index.html"><img src=""></a></div>-->
 		</div>
 
 <br><br><br><br><br>
 
 
-	<div id="main"><h1 class="large">Leibering Dimension, Inc.</h1></div>
-	
+	<div id="main">
+		<center><img src="../images/leibering.png"></center>
+		<!--<h1 class="large">Leibering Dimension</h1>
+		<h3 class="byline">A Leibering Company</h3>-->
+	</div>
+	<br><br>
 <div id="wrapper">
 
 	<!--  Conent  -->
@@ -106,13 +113,12 @@
     </div>
 </div>
 
-</div>
     <br>
 <!-- Footer -->
 
 <div id="finish">
 	<div id="footer">
-    	<p>Copyright &copy Leibering Dimension, Inc. 2014 | <a href="index.html#contact">Contact Us</a></p>
+    	<p>Copyright &copy Leibering Dimension, Inc. 2017 | <a href="../main/index.html">Leibering & Sons</a> | <a href="index.html#contact">Contact Us</a></p>
 	</div>
 </div>
 
