--- a/dimensions/product.html
+++ b/dimensions/product.html
@@ -7,41 +7,46 @@
 			Leibering Dimension
 		</title>
 		<meta content="" name="keywords">
-		<meta content="" name="description"><!-- CSS -->
-		<link href="style.css" media="all" rel="stylesheet" type="text/css"><!-- JAVA -->
-
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js">
-		</script>
-        
-        <script src="anchor.js"></script>
+		<meta content="" name="description">
+		
+		<!-- CSS -->
+		<link href="../style.css" media="all" rel="stylesheet" type="text/css">
+		
+		<!-- JAVA -->        
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="../anchor.js"></script>
 
         <!-- External -->
 		<link href='http://fonts.googleapis.com/css?family=Lustria' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
 	</head>
 	<body>
         <a name="Sustainability"></a>
 		<!--  Menu  -->
 		<div id="menuBar">
-			<nav>
-				<ul>
-					<li>
-						<a href="index.html">Home</a>
-					</li>
+			<a href="index.html"><span>Leibering Dimension</span></a>
+			<center>
+				<nav>
+					<ul>
+						<li>
+							<a href="index.html">Home</a>
+						</li>
 
-					<li>
-						<a href="index.html#contact">Contact Us</a>
-					</li>
+						<li>
+							<a href="index.html#contact">Contact Us</a>
+						</li>
 
-					<li>
-						<a href="product.html#Sustainability">Sustainability</a>
-					</li>
+						<li>
+							<a href="product.html#Sustainability">Sustainability</a>
+						</li>
 
-					<li>
-						<a href="product.html#Products">Products</a>
-					</li>
-				</ul>
-			</nav>
+						<li>
+							<a href="product.html#Products">Products</a>
+						</li>
+					</ul>
+				</nav>
+			</center>
 			<!--<div class="menuimg"><a href="index.html"><img src=""></a></div>-->
 		</div>
 
@@ -107,7 +112,7 @@
 
 				<br>
 
-
+				
                 <div id="wrapper-content-paragraph">
 				<h3>
 					Products
@@ -116,93 +121,7 @@
 				<hr align="left" class="title">
 
 				<div class="longP">
-					<h5 id="A">
-						Furniture
-					</h5>
-
-					<ul>
-						<li>We meet any dimension
-						</li>
-
-						<li>Beautiful wood species including cherry, hard maple, red and white oak, hickory
-						</li>
-
-						<li>We typically offer a 2-3 week turnaround
-						</li>
-
-						<li>We supply all quality grades from all clear to knotty
-						</li>
-
-						<li>Custom panels, rails and styles
-						</li>
-					</ul>
-
-					<br>
-
-					<h5 id="B">
-						Flooring
-					</h5>
-
-					<ul>
-						<li>We meet any dimension from 2 1/4 width and up
-						</li>
-
-						<li>We offer full line of hard wood species (see below)
-						</li>
-
-						<li>We typically offer a 2-3 week turnaround
-						</li>
-
-						<li>We supply all quality grades from all clear to knotty.
-						</li>
-					</ul>
-
-                    <br>
-
-					<h5 id="C">
-						Paneling
-					</h5>
-
-					<ul>
-						<li>We meet any dimension from 3" to 8" cut to any length
-						</li>
-
-						<li>Beautiful white pine wood species
-						</li>
-
-						<li>We typically offer a 2-3 week turnaround
-						</li>
-
-						<li>We supply all quality grades from all clear to knotty
-						</li>
-					</ul>
-
-                    <br>
-
-					<h5 id="D">
-						Cabinets
-					</h5>
-
-					<ul>
-						<li>We meet any dimension
-						</li>
-
-						<li>Beautiful wood species including cherry, hard maple, red and white oak, hickory
-						</li>
-
-						<li>We typically offer a 2-3 week turnaround
-						</li>
-
-						<li>We supply all quality grades from all clear to knotty
-						</li>
-
-						<li>Custom panels, rails and styles
-						</li>
-					</ul>
-
-                    <br>
-
-                    <h5 id="E">
+					<h5 id="E">
 						Equipment
 					</h5>
 
@@ -251,9 +170,77 @@
 					</ul>
 
 					<p>
-						Call today for a quote - 812-367-2971 Choose your wood species poplar, hard maple, soft maple, cherry, red oak,
-						white oak, walnut all species available.
+						Call today for a quote: <a href="index.html#contact">(812) 367-2971</a>
+						<br>Choose your wood species poplar, hard maple, soft maple, cherry, red oak,
+							white oak, and walnut all species available.
+						<br>Typical 2-3 week turnaround.
+						<br>All quality grades from clear to knotty
 					</p>
+
+					<br>
+
+					<div id="product-img"></div>
+
+					<h5 id="B">
+						Flooring
+					</h5>
+
+					<ul>
+						<li>Any dimension from 2 1/4 width and up
+						</li>
+
+						<li>Full line of hard wood species
+						</li>
+					</ul>
+
+
+					<h5 id="C">
+						Paneling
+					</h5>
+
+					<ul>
+						<li>Any dimension from 3" to 8"
+						</li>
+
+						<li>Any Length
+						</li>
+
+						<li>Beautiful white pine wood
+						</li>
+					</ul>
+
+					<h5 id="A">
+						Furniture
+					</h5>
+
+					<ul>
+						<li>Any dimension
+						</li>
+
+						<li>Beautiful wood including cherry, hard maple, red and white oak, hickory
+						</li>
+
+						<li>Custom panels, rails and styles
+						</li>
+					</ul>
+
+
+					<h5 id="D">
+						Cabinets
+					</h5>
+
+					<ul>
+						<li>Any dimension
+						</li>
+
+						<li>Beautiful wood including cherry, hard maple, red and white oak, hickory
+						</li>
+
+						<li>Custom panels, rails and styles
+						</li>
+					</ul>
+
+                    <br>
 					<br>
 					<br>
 				</div>
