--- a/index.html
+++ b/index.html
@@ -50,60 +50,22 @@
 		</div>
 
 <br><br><br><br><br>
+
+<div id="main"><h1 class="large">Leibering & Sons</h1></div>
+
 <div id="card-wrapper">
-    <div id="index-card">
-	    <div id="main"><h1 class="large">Leibering & Sons</h1></div>
+    <div class="full card">
 
-        <div class="card">
-            <section class="content">
-                <p> TEST </p>
-            </section>
-        </div>
-    </div>
-    
-    <br><br>
+        <br><br><br><br><br><br>
 
-    <div id="index-card">
-        <div id="main"><h1 class="large">Angus Farm</h1></div>
-
-        <div class="card">
-            <section class="content">
-                <p> TEST </p>
-            </section>
-        </div>
-    </div>
-
-    <br><br>
-
-    <div id="index-card">
-        <div id="main"><h1 class="large">Lumber & Logging</h1></div>
-
-        <div class="card">
-            <section class="content">
-                <p> TEST </p>
-            </section>
-        </div>
-    </div>
-
-    <br><br>
-
-    <div id="index-card">
-        <div id="main"><h1 class="large">Dimension Plant</h1></div>
-
-        <div class="card">
-            <section class="content">
-                <p> TEST </p>
-            </section>
-        </div>
     </div>
 </div>
 
-    <br>
 <!-- Footer -->
 
 <div id="finish">
 	<div id="footer">
-    	<p>Copyright &copy Leibering Dimension, Inc. 2014 | <a href="index.html#contact">Contact Us</a></p>
+    	<p>Copyright &copy Leibering Dimension, Inc. 2017 | <a href="index.html#contact">Contact Us</a></p>
 	</div>
 </div>
 
