--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         514 W. 8th Street<br>
         PO Box 189<br>
         Ferdinand, IN  47532-0189<br>
-        USA</div><br><div class="centerframe"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6268.776777314198!2d-86.866279!3d38.224094!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ef5adc5e47993%3A0x488f915b04ada32d!2s514+W+8th+St%2C+Ferdinand%2C+IN+47532!5e0!3m2!1sen!2sus!4v1428010917662" width="550" height="550" frameborder="0" style="border:0"></iframe></div>
+        USA</div><br><div class="centerframe"><iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6268.776777314198!2d-86.866279!3d38.224094!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ef5adc5e47993%3A0x488f915b04ada32d!2s514+W+8th+St%2C+Ferdinand%2C+IN+47532!5e0!3m2!1sen!2sus!4v1428010917662" width="100%" height="100%" frameborder="0" style="border:0"></iframe></div>
 		<br><br><br><br>
         
 		</div>
