Updated the website with a bunch of changes to text.

--- a/product.html
+++ b/product.html
@@ -48,35 +48,26 @@
 					</p>
 
 					<p>
-						Leibering Dimension takes standing lumber and converts the raw materials to the saw mill, where it is dried and
-						processed into its final dimension. Unique in the industry, Leibering is one of the few companies taking product
+						Leibering Dimension purchases green lumber and uses one of the 4 kilns to dry and process it.
+						 Unique in the industry, Leibering Dimension is one of the few companies that has the capability of taking a product
 						from harvest to completion. We think you'll find Leibering Dimension easy to work with and a high-quality on-time
 						supplier!
 					</p>
 
 					<p>
-						For three generations in Indiana, the Leibering Family has been devoted to the timber industry. From the timber
-						harvesting and tree planting operations, to the high production band sawmill and dimension products facility, an
-						attitude of stewardship and responsibility to the forest and to the environment is evident in every aspect of our
-						business.
+						The Leibering Companies are completely vertically integrated. We have the ability to plant trees, 
+						select and harvest for regeneration and transport logs to the sawmill, which in turn provides lumber for the dimension plant.
 					</p>
-
 					<p>
-						The Forest Stewardship Council has awarded us the Chain-of-Custody Certificate which allows us to certify
-						products have been harvested from forests that meet stringent environmental, social and economic standards.
+						From Roughout lumber to our beautiful hardwood flooring, our success to attributed to 
+						our great workforce and our ability to control the production process from start to finish. 
+						Our attention to detail is the heart of everything we do. 
 					</p>
-
-					<hr class="base">
-
 					<p>
-						At Leibering Dimension our focus is to exceed each customers individual needs by providing them with superior
-						products and service every time, wholly supported by our parent company Leibering Lumber.
+						Our goal since we were established in 2008 is to consistently provide our customers with high quality dimension products.
 					</p>
-
 					<p>
-						From the rough lumber production to finished dimension products, our success is attributed to our great people
-						and the ability to control the production process from start to finish. This complete attention to detail is at
-						the heart of everything we do and everything we are.
+						You’ll find Leibering Dimension to be an on time, high quality supplier.
 					</p>
 
 					<p>
@@ -105,14 +96,13 @@
 
 					<p>
 						If you're a local manufacturer, architect, designer, large distributor or installer, you'll find Leibering
-						Dimension a great supplier. Need "green" products? We've got them!
+						Dimension a great supplier.
 
                         <br>
                         <br>
 
-						We have the right equipment to cut to your exact specification. Here's a list of some of what we have on our
-						&nbsp;&nbsp; site - high quality and quick turn around distinguish us from the competitors. Most orders are out
-						the door in &nbsp;&nbsp; one week!
+						We have the right equipment to provide you with a superiour product. High quality and 2-3 week turn around 
+						distinguish us from the competitors.
 					</p>
 
 					<ul>
@@ -149,10 +139,10 @@
 
 					<p>
 						Call today for a quote: <a href="index.html#contact">(812) 367-2971</a>
-						<br>Choose your wood species poplar, hard maple, soft maple, cherry, red oak,
-							white oak, and walnut all species available.
-						<br>Typical 2-3 week turnaround.
-						<br>All quality grades from clear to knotty
+						<br>1.) Choose your wood species poplar, hard maple, soft maple, cherry, red oak,
+							white oak, walnut, and more.
+						<br>2.) All quality grades from clear to knotty
+						<br>3.) Call (812) 367-2971
 					</p>
 
 					<br>
@@ -166,7 +156,7 @@
 					</h5>
 
 					<ul>
-						<li>Any dimension from 2 1/4 width and up
+						<li>Any dimension from 1 1/4 - 9"
 						</li>
 
 						<li>Full line of hard wood species
@@ -179,44 +169,39 @@
 					</h5>
 
 					<ul>
-						<li>Any dimension from 3" to 8"
+						<li>Any dimension from 3" to 36" -- Special Orders Available
 						</li>
 
 						<li>Any Length
 						</li>
 
-						<li>Beautiful white pine wood
-						</li>
 					</ul>
 
 					<h5 id="A">
-						Furniture
+						Furniture Dimension
 					</h5>
 
 					<ul>
 						<li>Any dimension
 						</li>
 
-						<li>Beautiful wood including cherry, hard maple, red and white oak, hickory
-						</li>
-
-						<li>Custom panels, rails and styles
+						<li>Custom panels, rails, and stiles
 						</li>
 					</ul>
 
 
 					<h5 id="D">
-						Cabinets
+						Cabinets Dimension
 					</h5>
 
 					<ul>
 						<li>Any dimension
 						</li>
 
-						<li>Beautiful wood including cherry, hard maple, red and white oak, hickory
+						<li>Custom panels, rails and stiles
 						</li>
 
-						<li>Custom panels, rails and styles
+						<li>Panel Doors, Drawr fronts/sides
 						</li>
 					</ul>
 
