Working on products page, need finishing touches.

--- a/product.html
+++ b/product.html
@@ -51,121 +51,118 @@
 				<hr align="left" class="title">
 
 				<div class="longP">
-					<h5 id="E">
-						Equipment
+					<h5 id="B">
+						Unfinished Hardwood Flooring
 					</h5>
-
 					<p>
-						If you're a local manufacturer, architect, designer, large distributor or installer, you'll find Leibering
-						Dimension a great supplier.
-
-                        <br>
-                        <br>
-
-						We have the right equipment to provide you with a superiour product. High quality and 2-3 week turn around 
-						distinguish us from the competitors.
+						We cut our hardwood flooring out of FAS grade lumber, which is what separates us from our
+						competitors. By using FAS grade lumber we have the ability to get long cuts (up to 12 feet),
+						which really brings out the characteristics in each specific species. In addition, if you are looking
+						for more character, we can cut the flooring out of 1 common or 2 common lumber. This will
+						also make the flooring cheaper.
 					</p>
 
+					<strong>Delivery is available</strong> - Don’t hesitate to call for a price quote!<br><br>
+
+					Dimensions Available:
 					<ul>
-						<li>Automated lumber & material handling system
+						<li>Length – 1’-12’
 						</li>
 
-						<li>Moulders-Weining Unimat 6 head & Diehl 4 head
+						<li>Width – 1 1⁄4” – 9”
 						</li>
 
-						<li>Planers-Buss single head rough, Buss double head rough, Newman S-282 Finish
-						</li>
-
-						<li>Re-Saw-Baker
-						</li>
-
-						<li>Sanders-Timesaver 200 Planer/Sander & Tidland T130
-						</li>
-
-						<li>Glue Press-(RF) L & L
-						</li>
-
-						<li>Dimter Opticut 304 Twin Saw Computerized cut up and sorting system
-						</li>
-
-						<li>Tenon Machine-Jenkins 143
-						</li>
-
-						<li>Gang Rips-Shea S-6, Mueller M3, Progressive with Dysys vision assisted computerized system
-						</li>
-
-						<li>Dry Kilns-3 Irvington Moore 150,000 capacity
+						<li>We also have the ability to do S4S Top Nail flooring.
 						</li>
 					</ul>
+					Species Available – <strong>any native species</strong>
+					<ul class="multi-column">
+						<li>White Oak</li>
+						<li>Red Oak</li>
+						<li>Ash</li>
+						<li>Walnut</li>
+						<li>Hickory (Rustic available)</li>
+						<li>Hard Maple</li>
+						<li>Kentucky Coffee Tree</li>
+						<li>Beech</li>
+						<li>Cherry</li>
+					</ul>
 
-					<p>
-						Call today for a quote: <a href="index.html#contact">(812) 367-2971</a>
-						<br>1.) Choose your wood species poplar, hard maple, soft maple, cherry, red oak,
-							white oak, walnut, and more.
-						<br>2.) All quality grades from clear to knotty
-						<br>3.) Call (812) 367-2971
-					</p>
-
-					<br>
-
-					<div id="product-img">
-						<img src="images/wood.jpg" style="position:relative;right:20%">
+					<div class="divTable">
+						<div class="divTableBody">
+							<div class="divTableRow">
+								<div class="divTableCell"><img src="images/DSC_3629.jpg" width="70%"></div>
+								<div class="divTableCell"><img src="images/DSC_3538.jpg" width="70%"></div>
+							</div>
+						</div>
 					</div>
 
-					<h5 id="B">
-						Flooring
-					</h5>
-
-					<ul>
-						<li>Any dimension from 1 1/4 - 9"
-						</li>
-
-						<li>Full line of hard wood species
-						</li>
-					</ul>
-
+					<br>
 
 					<h5 id="C">
 						Paneling
 					</h5>
+					<p>
+						Glued panels for cabinet and drawer fronts are available in any native species. We have the
+						ability to produce any width up to 36” and any length.<br><br>
+						**Special orders are available as well.
+					</p>
+					
+					<figure>
+						<img src="images/DSC_3518.jpg" width="50%">
+						<figcaption>Glue hickory panels</figcaption>
+					</figure>
 
-					<ul>
-						<li>Any dimension from 3" to 36" -- Special Orders Available
-						</li>
+					<p>
+						Wall paneling is available in any native species. We can produce any length up to 14’ and any
+						width up to 9”.
+					</p>
 
-						<li>Any Length
-						</li>
+					<figure>
+					<table>
+							<tbody>
+							<tr>
+							<td><img src="images/IMG_1834.jpg" width="100%"></td>
+							<td><img src="images/IMG_1835.jpg" width="100%"></td>
+							<td><img src="images/IMG_1836.jpg" width="100%"></td>
+							</tr>
+							</tbody>
+						</table>
 
-					</ul>
+						<figcaption>Glue hickory panels</figcaption>
+					</figure>
+
+					<br>
 
 					<h5 id="A">
-						Furniture Dimension
+						Furniture/Cabinet Dimension
 					</h5>
+					<p>
+						Furniture and cabinet dimension are available in any native species. We can produce any length
+						and any width up to 8”. Custom panels, rails, and stiles are also available, along with drawer
+						fronts/sides.
+					</p>
+					<figure>
+						<table>
+							<tbody>
+								<tr>
+									<td><img src="images/DSC_3524.jpg" width="75%"></td>
+									<td><img src="images/DSC_3557.jpg" width="100%"></td>
+								</tr>
+							</tbody>
+						</table>
+					</figure>
 
-					<ul>
-						<li>Any dimension
-						</li>
-
-						<li>Custom panels, rails, and stiles
-						</li>
-					</ul>
-
+					<br>
 
 					<h5 id="D">
-						Cabinets Dimension
+						Kiln Dried Lumber
 					</h5>
-
-					<ul>
-						<li>Any dimension
-						</li>
-
-						<li>Custom panels, rails and stiles
-						</li>
-
-						<li>Panel Doors, Drawr fronts/sides
-						</li>
-					</ul>
-
+					<p>
+						We can dry any species of lumber in one of
+						our four kilns.
+					</p>
+					<div class="kiln_lumber"><img src="images/DSC_2599.jpg" width="50%"></div>
                     <br>
 					<br>
 					<br>
