--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<link href='http://fonts.googleapis.com/css?family=Lusitana' rel='stylesheet' type='text/css'>
 		<title>
-			Leibering Dimension
+			Leibering Dimension | Products
 		</title>
 		<meta content="" name="keywords">
 		<meta content="" name="description">
