Moved maps screen on smaller monitors and moved kiln image to be below text.

--- a/product.html
+++ b/product.html
@@ -129,7 +129,7 @@
 							</tbody>
 						</table>
 
-						<figcaption>Glue hickory panels</figcaption>
+						
 					</figure>
 
 					<br>
@@ -162,7 +162,7 @@
 						We can dry any species of lumber in one of
 						our four kilns.
 					</p>
-					<div class="kiln_lumber"><img src="images/DSC_2599.jpg" width="50%"></div>
+					<img src="images/DSC_2599.jpg" width="50%">
                     <br>
 					<br>
 					<br>
