Fixed google maps on a even smaller monitors and fixed a caption.

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
                         <div class="divTableCell">
                             <figure>
                                 <img src='images/18447131_865395520276980_2251171793022426688_n.jpg' width="92%">
-                                <figcaption>The young Leibering brothers playing on their tree farming
-                                    property. Once owned by their father, now owned by the brothers and their two sisters.</figcaption>
+                                <figcaption>The Leibering brothers stand proud of their accomplishments.</figcaption>
                             </figure>
                         </div>
                     </div>
