Added Contact info, expanded .spacewidth, changed cheaper to less expensive on products page.

--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
                 <div class="email">
                     <!-- TODO:: Clean this section up, visually -->
                     Email  <br><hr class='base'>Shawn Leibering, Leibering Dimension – <a href="mailto:leiberingdim@psci.net">leiberingdim@psci.net</a><br>
-                           Felicia Leibering, Sales &amp; Marketing – <a href="mailto:leiberingfelicia@gmail.com">leiberingfelicia@gmail.com</a><br><br>
-                           Matt and Steve Leibering, Logging Operation – <a href="mailto:leiberinginc@psci.net">leiberinginc@psci.net</a><br>
+                           Felicia Leibering, Sales &amp; Marketing – <a href="mailto:leiberingfelicia@gmail.com">leiberingfelicia@gmail.com</a><br>
+                           Brandon Leibering, Supervisor - <a href="mailto:leiberingfelicia@gmail.com">ldi@psci.net</a><br><br>
+                           Matt and Steve Leibering, Tree Farming Management – <a href="mailto:leiberinginc@psci.net">leiberinginc@psci.net</a><br>
                            Phil Leibering, Farming and Cattle Operation – <a href="mailto:leiberinginc@psci.net">leiberinginc@psci.net</a>
                 </div>
         </p><br>
