--- a/product.html
+++ b/product.html
@@ -59,7 +59,7 @@
 						competitors. By using FAS grade lumber we have the ability to get long cuts (up to 12 feet),
 						which really brings out the characteristics in each specific species. In addition, if you are looking
 						for more character, we can cut the flooring out of 1 common or 2 common lumber. This will
-						also make the flooring cheaper.
+						also make the flooring less expensive.
 					</p>
 
 					<strong>Delivery is available</strong> - Don’t hesitate to call for a price quote!<br><br>
